www/aMessage/main.css
html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden; 
}

* {
    box-sizing: border-box;
}

#top {
    flex-direction: row;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    justify-content: center;
    position: fixed;
    z-index: 1;
    border: 1px solid rgb(40, 40, 40);
    background-color: rgb(40, 40, 40);
}


#to_form {
    margin: 1.0rem 3.0rem;
    margin-bottom: 0.5rem;
    height: 8%;
}

#to_form input {
    border-radius: 0.8rem;
    padding: 0.8rem;
    width: fit-content;
    min-width: 15.0rem;
    max-width: 90%;
}

#to_form input:focus {
    outline: none;       
    border-color: black;  
    box-shadow: none;    
}

#to_form button {
    border: 2px solid black;
    border-radius: 1.0rem;
    background-color: white;
    color: black;
}

#to_form button:hover {
    border-color: white;
    background-color: black;
    color: white;
    box-shadow: 0 0 0.4rem 0.8rem #16f5298a;
}

#container {
    display: flex;
    flex-direction: row;
    position: fixed;
    bottom: 13%;
    top: 10.0rem;
    width: 100%;
}

#contacts_container {
    flex: 20;
    display: flex;
    flex-direction: row-reverse;
    z-index: 2;
    min-height: 0;
    min-width: 0;
    border: 1px solid rgb(40, 40, 40);
}

#open {
    align-self: center;
    display: none;
    width: 0;
    flex-basis: 0;
}

#buttons { 
    align-self: flex-start;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    min-height: 0;
    min-width: 0;
}

#buttons button {
    border-radius: 1.0rem;
    width: fit-content;
    max-width: 100%;
    word-wrap: break-all;
    white-space: normal;
    overflow-wrap: anywhere;
}

#received_messages {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    flex: 80;
}

#received_messages p{
    border-radius: 1.0rem;
    width: fit-content;
    max-width: 90%;
    padding: 1.0rem;
    margin: 0.5rem 2.0rem;
}
#received_messages p.received{
    margin-right: 10%;
    background-color: black;
    border: 2px solid white;
    color: white;
    align-self: flex-start;
}
#received_messages p.sent{
    margin-left: 10%;
    background-color: white;
    color: black;
    border: 2px solid black;
    align-self: flex-end;
}

#dm_form {
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    margin: 1.0rem 3.0rem;
    border-top: 1px solid white;
    height: 10%;
}

#dm_form input {
    border: 2px solid black;
    border-radius: 1.0rem;
    padding: 1.0rem;
    width: fit-content;
    min-width: 20.0rem;
    max-width: 90%;
}

#dm_form input:focus {
    outline: none;       
    border-color: black;  
    box-shadow: none;    
}

#dm_form button {
    border: 2px solid black;
    border-radius: 1.0rem;
    background-color: white;
    color: black;
}

@media (max-width: 48rem) {
    #open {
        font-size: 3.0rem;
        border: solid;
        border-color: #16f529;
        padding: 0.5rem;
        display: grid;
        place-items: center;
        cursor: pointer;
        transition: rotate 0.5s ease-in-out;
        rotate: 0deg;
        box-sizing: border-box;
        width: 6rem;
        height: 5rem;
    }

    #open.open {
        rotate: 180deg;
    }

    #received_messages {
        flex: 1;
        transition: flex 0.5s ease-in-out;
    }

    #received_messages.open {
        flex: 0;
        display: none;
    }

    #contacts_container {
        transition: flex 0.5s ease-in-out;
        flex: 0;
        width: max-content;
        display: flex;
        border: none;
        overflow: hidden;
    }

    #contacts_container.open {
        flex: 1;
        border: 1px solid rgb(40, 40, 40);
    }

    #buttons {
        display: flex;
    }

    #to_form input, #dm_form input {
        min-width: 0;
        width: 100%;
    }
}

